--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
         "test:live": "webpack-dev-server --mode development --env test"
     },
     "dependencies": {
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "plotly.js": "^2.18.1",
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-plotly.js": "^2.6.0"
     },
     "devDependencies": {
         "copy-webpack-plugin": "^10.0.0",
